# docs/swagger.yaml
@@ -1,8 +1,37 @@
-basePath: /
+basePath: /api
 definitions:
-  go-fiber-postgres-template_pkg_core.ErrorResponse:
+  go-fiber-postgres-template_pkg_user.User:
     properties:
-      details:
+      createdAt:
+        example: "2022-01-01T00:00:00Z"
+        format: date-time
+        type: string
+      deletedAt:
+        type: string
+      email:
+        type: string
+      id:
+        example: 1
+        format: int64
+        type: integer
+      names:
+        type: string
+      password:
+        type: string
+      updatedAt:
+        type: string
+      username:
+        type: string
+    type: object
+  pkg_auth.RegisterRequest:
+    properties:
+      email:
+        type: string
+      names:
+        type: string
+      password:
+        type: string
+      username:
         type: string
     type: object
   pkg_user.User:
@@ -51,14 +80,6 @@ paths:
             additionalProperties:
               type: string
             type: object
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/go-fiber-postgres-template_pkg_core.ErrorResponse'
-        "401":
-          description: Unauthorized
-          schema:
-            $ref: '#/definitions/go-fiber-postgres-template_pkg_core.ErrorResponse'
       summary: Hello World example
       tags:
       - Hello World
@@ -72,17 +93,29 @@ paths:
             additionalProperties:
               type: string
             type: object
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/go-fiber-postgres-template_pkg_core.ErrorResponse'
-        "401":
-          description: Unauthorized
-          schema:
-            $ref: '#/definitions/go-fiber-postgres-template_pkg_core.ErrorResponse'
       summary: Health example
       tags:
       - Health
+  /register:
+    post:
+      description: Register a new user
+      parameters:
+      - description: The input user struct
+        in: body
+        name: data
+        required: true
+        schema:
+          $ref: '#/definitions/pkg_auth.RegisterRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/go-fiber-postgres-template_pkg_user.User'
+      summary: Register a new user
+      tags:
+      - Auth
   /users:
     get:
       description: Retrieves a list of all users from the database
@@ -95,14 +128,6 @@ paths:
             items:
               $ref: '#/definitions/pkg_user.User'
             type: array
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/go-fiber-postgres-template_pkg_core.ErrorResponse'
-        "401":
-          description: Unauthorized
-          schema:
-            $ref: '#/definitions/go-fiber-postgres-template_pkg_core.ErrorResponse'
       summary: Get All Users
       tags:
       - Users
@@ -124,14 +149,6 @@ paths:
           description: ok
           schema:
             $ref: '#/definitions/pkg_user.User'
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/go-fiber-postgres-template_pkg_core.ErrorResponse'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/go-fiber-postgres-template_pkg_core.ErrorResponse'
       summary: Create a New User
       tags:
       - Users
