# pkg/user/routes.go
@@ -2,9 +2,8 @@ package user
 
 import "github.com/gofiber/fiber/v2"
 
-func UserRouters(app *fiber.App) {
+func UserRouters(app fiber.Router) {
 	app.Get("/users", GetAllUsers)
-	app.Post("/register", CreateUser)
 	app.Get("/users/me", GetAllUsers)
 	app.Put("/users/:id", GetAllUsers)
 	app.Patch("/users/:id", GetAllUsers)
